syntax = "proto2";

option java_multiple_files = true;

message ReduceOperatorState {
  optional int32 wordCount = 1;
  repeated int32 vTimestamp = 2;
  map<int32, int32> InputCounts = 3;
  map<int32, int32> OutputCounts = 4;
  optional int32 OperatorType = 5 [default=3];
}